# lockr

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.tmp-verify-epic1/: session.json  vault.lockr
.tmp-verify-epic2/: .env
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 3-1-run-a-command-with-injected-secrets.md  4-1-create-encrypted-git-backup.md  5-1-browse-secrets-in-a-tui.md  5-2-view-audit-metadata.md  sprint-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/state/: config.yaml  ledger.yaml
docs/planning/: architecture.md  checkpoints.md  overview.md  prd.md  stories.md  tech_spec_epic1.md  tech_spec_epic2.md  validation_epic1.md  validation_epic2.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  lockr-callflow.html  manifest.json
graphify-out/cache/: stat-index.json
src/lockr/: __main__.py  paths.py
src/lockr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lockr/app/: __init__.py  vault_service.py
src/lockr/cli/: __init__.py  main.py
src/lockr/domain/: __init__.py  models.py
src/lockr/integrations/: __init__.py  env_files.py  git_backup.py  shell.py
src/lockr/security/: __init__.py  crypto.py
src/lockr/storage/: __init__.py  files.py
src/lockr/tui/: app.py
tests/: test_epic1_cli.py  test_epic2_env_workflow.py  test_epic3_runtime_injection.py  test_epic3_story2_and_epic4.py  test_epic4_backup_recovery.py  test_epic5_tui.py
