[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lockr"
version = "0.1.0"
description = "Terminal-based secrets vault with encrypted local storage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=45.0.0",
  "typer>=0.16.0",
  "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]

[project.scripts]
lockr = "lockr.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
